# cdtools

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  SLM script.py  conda_requirements.txt  constraints.txt  example_environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  publish.yml
CDTools/: __init__.py  datasets.py
CDTools/datasets/: __init__.py  base.py  polarized_ptycho_2d_dataset.py  ptycho_2d_dataset.py
CDTools/models/: base.py  (+15 more)
converters/: NSLS2_HXN_hdf5_to_CXI.py  TITAN_stem.py
docs/: Makefile  build_custom_docs.md  publish
examples/: MIT_BNL_logo.py  basic_ptycho_dataset.py  debug_3d.py  demo.py  distributed_speed_test.py  ensemble_analysis.py  ensemble_reconstruction.py  fancy_ptycho.py  fancy_ptycho_comparison.py  fancy_ptycho_multi_gpu.py  fancy_ptycho_multi_gpu_ddp.py  fancy_ptycho_multi_gpu_ddp_speed_test.py  fancy_ptycho_optimizer.py  fancy_ptycho_speed_test.py  fancy_ptycho_torchrun.py  generate_data.py  gold_ball_ensemble_ptycho.py  gold_ball_ptycho.py  gold_ball_split.py  gold_ball_synthesize.py  inspect_dataset.py  lab_bragg_2d_ptycho.py  lab_ptycho_data.py  multi_gpu_simple_ptycho.py  simple_ptycho.py  simple_ptycho_model.py  single_to_multi_gpu.py  specular_pinhole_ptycho.py  specular_ptycho.py  transmission_RPI.py  tutorial_basic_ptycho_dataset.py  tutorial_finale.py  tutorial_simple_ptycho.py  unified_modes.py
kiara_debugging_code/: debugging_mod.py  vid_read.py
temp_tests/: simulated_dataset.py
tests/: conftest.py  test_datasets.py  test_polarization.py  test_reconstructors.py  test_version.py
(+182 files in other folders)
